--- a/src/status.html
+++ b/src/status.html
@@ -856,7 +856,7 @@
                             <td></td>
                             <td>상세</td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0202_M01.html">SCR_GA_BN_0202_M01.html</a></td>
                             <td class="stat"></td>
@@ -870,7 +870,7 @@
                             <td>쿠폰몰</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_M01.html">SCR_GA_BN_0301_M01.html</a></td>
                             <td class="stat"></td>
@@ -884,7 +884,7 @@
                             <td></td>
                             <td>국방부 채널 선택</td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_P01.html">SCR_GA_BN_0301_P01.html</a></td>
                             <td class="stat"></td>
@@ -898,7 +898,7 @@
                             <td></td>
                             <td>국방부 혜택 대상자 안내</td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_P02.html">SCR_GA_BN_0301_P02.html</a></td>
                             <td class="stat"></td>
@@ -912,7 +912,7 @@
                             <td></td>
                             <td>국방부 개인정보 수집/이용</td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_P03.html">SCR_GA_BN_0301_P03.html</a></td>
                             <td class="stat"></td>
@@ -926,7 +926,7 @@
                             <td></td>
                             <td>국방부 개인정보 제3자 제공</td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_P04.html">SCR_GA_BN_0301_P04.html</a></td>
                             <td class="stat"></td>
@@ -940,7 +940,7 @@
                             <td></td>
                             <td>롯데 임직원 쿠폰몰</td>
                             <td>롯데 임직원 인증</td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0302_M01.html">SCR_GA_BN_0302_M01.html</a></td>
                             <td class="stat"></td>
