혜택 > 쿠폰몰 (롯데임직원, 마스터카드, 나라사랑 포털) -- 작업 중

--- a/src/html/benefit/SCR_GA_BN_0306_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0306_M01.html
@@ -6,36 +6,17 @@
     <body>
         <div id="wrap">
             <!-- header -->
-            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "혜택" })
+            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "마스터카드 쿠폰몰" })
             <!-- //header -->
 
             <!-- container -->
             <section id="container">
                 <div class="contents">
                     <div class="benefit">
-                        <div class="gc-tab">
-                            <ul>
-                                <li><a href="#">이벤트</a></li>
-                                <li><a href="#" class="active">쿠폰</a></li>
-                            </ul>
-                        </div>
-                        <div class="cont">
-                            <div class="gc-tab-type02">
-								<ul>
-									<li><a href="#" class="active">쿠폰받기</a></li>
-									<li><a href="#">쿠폰몰</a></li>
-								</ul>
-								<span class="tab-indicator"></span>
-							</div>
+                        <div class="cont pt0">
                             <section class="section">
-                                <!-- <h3 class="section-title">쿠폰 번호 입력</h3> -->
-                                <div class="section-cont">
-                                    <div class="ip-group">
-                                        <div class="row">
-                                            <input type="text" placeholder="쿠폰 번호 입력" />
-                                            <button class="btn primary md"><span class="text">등록</span></button>
-                                        </div>
-                                    </div>
+                                <div class="logo-img">
+                                    <img src="/images/contents/mastercard_big.svg" alt="mastercard">
                                 </div>
                             </section>
                             <hr class="divider" />
