--- a/src/status.html
+++ b/src/status.html
@@ -954,10 +954,10 @@
                             <td></td>
                             <td></td>
                             <td>롯데 임직원 쿠폰몰 목록</td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0303_M01.html">SCR_GA_BN_0303_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -996,10 +996,10 @@
                             <td></td>
                             <td></td>
                             <td>목록</td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0306_M01.html">SCR_GA_BN_0306_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1010,10 +1010,10 @@
                             <td></td>
                             <td>나라사랑포털 쿠폰몰</td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0307_M01.html">SCR_GA_BN_0307_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
