--- a/src/html/benefit/SCR_GA_BN_0201_P01.html
+++ b/src/html/benefit/SCR_GA_BN_0201_P01.html
@@ -1,4 +1,4 @@
-<div class="layer-wrap">
+<div class="layer-wrap benefit">
 	<div class="layer-header">
 		<!-- 프리존 반납이란? -->
 		@@include('@@webRoot/include/header.html', {
@@ -8,7 +8,7 @@
 	</div>
 	
 	<div class="layer-body">
-		<div class="benefit">
+		<div class="coupon">
 			
 			<ul class="txt-list dot">
 				<li>
