--- a/src/status.html
+++ b/src/status.html
@@ -859,7 +859,7 @@
                             <td>이민우</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0202_M01.html">SCR_GA_BN_0202_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -886,8 +886,8 @@
                             <td></td>
                             <td>이민우</td>
                             <td>/benefit</td>
-                            <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_P01.html">SCR_GA_BN_0301_P01.html</a></td>
-                            <td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_BN_0301_P01#bottom">SCR_GA_BN_0301_P01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
