title - font-size 공통화 적용

--- a/src/html/benefit/SCR_GA_BN_0301_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0301_M01.html
@@ -28,7 +28,7 @@
 								<span class="tab-indicator"></span>
 							</div>
                             <section class="section">
-                                <h3 class="section-title">환영합니다!
+                                <h3 class="title-sm">환영합니다!<br>
                                     인증된 회원님들을 위한 전용 쿠폰몰입니다.
                                 </h3>
                                 <div class="section-cont">
@@ -40,7 +40,7 @@
                                                 </div>
                                                 <div class="text">롯데 임직원 쿠폰몰</div>
                                                 <button class="btn icon lg">
-                                                    <i class="ico arrow-right-nav050 md"></i>
+                                                    <i class="ico arrow-right-nav050 sm"></i>
                                                 </button>
                                             </a>
                                         </li>
@@ -51,7 +51,7 @@
                                                 </div>
                                                 <div class="text">공공주택 입주민 쿠폰몰</div>
                                                 <button class="btn icon lg">
-                                                    <i class="ico arrow-right-nav050 md"></i>
+                                                    <i class="ico arrow-right-nav050 sm"></i>
                                                 </button>
                                             </a>
                                         </li>
@@ -63,7 +63,7 @@
                                                 <div class="text">마스터카드
                                                     쿠폰몰</div>
                                                 <button class="btn icon lg">
-                                                    <i class="ico arrow-right-nav050 md"></i>
+                                                    <i class="ico arrow-right-nav050 sm"></i>
                                                 </button>
                                             </a>
                                         </li>
@@ -74,7 +74,7 @@
                                                 </div>
                                                 <div class="text">국방부 쿠폰몰</div>
                                                 <button class="btn icon lg">
-                                                    <i class="ico arrow-right-nav050 md"></i>
+                                                    <i class="ico arrow-right-nav050 sm"></i>
                                                 </button>
                                             </a>
                                         </li>
