--- a/src/html/benefit/SCR_GA_BN_0305_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0305_M01.html
@@ -14,7 +14,7 @@
                 <div class="contents">
                     <div class="benefit">
                         <div class="cont certi">
-                            <p class="guide-text">마스터카드번호를 입력하신 후 인증버튼을 눌러 인증을 진행해주세요.</p>
+                            <p class="title-md">마스터카드번호를 입력하신 후 인증버튼을 눌러 인증을 진행해주세요.</p>
                             <div class="ci-img">
                                 <img src="/images/contents/mastercard_big.svg" alt="" />
                             </div>
