--- a/src/html/reservation/SCR_GA_RV_0211_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0211_M01.html
@@ -10,7 +10,7 @@
 	<div class="layer-body">
 		<div class="reservation">
 			<section class="pb0">
-				<h2>주요 페널티 안내</h2>
+				<h2 class="title-md">주요 페널티 안내</h2>
 				<p>회원 영구정지 및 페널티 20만원+발생 실비 청구</p>
 				<ul class="list">
 					<li>차량내 흡연, 반려동물 캐리어 미탑승 적발</li>
@@ -34,7 +34,7 @@
 			</section>
 			<hr class="divider" />
 			<section class="pb0">
-				<h2>취소 수수료 안내</h2>
+				<h2 class="title-md">취소 수수료 안내</h2>
 				<p>취소 시점에 따라 수수료가 부과될 수 있습니다.</p>
 	
 				<ul class="tmp-faq-list">
@@ -52,7 +52,7 @@
 			</section>
 			<hr class="divider" />
 			<section>
-				<h2>이용 안내</h2>
+				<h2 class="title-md">이용 안내</h2>
 				<ul class="list">
 					<li>주유 시 차량 내 비치된 주유카드를 이용해주세요.</li>
 					<li>운행 전, 차량 외관상태를 확인 후 파손된 부위를 촬영하여 등록해주세요. (스마트키 메뉴 내 차량확인 기능 활용)</li>
