--- a/src/html/benefit/SCR_GA_BN_0301_P02.html
+++ b/src/html/benefit/SCR_GA_BN_0301_P02.html
@@ -8,6 +8,23 @@
 	</div>
 	
 	<div class="layer-body">
-		
+		<div class="txt-module-page">
+			<section class="section">
+				<p class="title-sm">나라사랑포털 혜택 대상자</p>
+				<p class="desc-md">나라사랑포털 인증 회원 중 전역/소집해제일로부터 1년 기간에 해당하는 아래 대상자</p>
+				<ul class="list">
+					<li>현역(상근 포함)</li>
+					<li>전환복무자(의무경찰,해양의무경찰,의무소방)</li>
+					<li>대체복무자(사회복무요원)</li>
+					<li>E-병무지갑 인증회원 한정</li>
+				</ul>
+			</section>
+			<section class="section">
+				<p class="title-sm">국방복지포털 혜택 대상자</p>
+				<ul class="list">
+					<li>국방복지포털 인증 회원</li>
+				</ul>
+			</section>
+		</div>
 	</div>
 </div>
