--- a/src/html/benefit/SCR_GA_BN_0301_P04.html
+++ b/src/html/benefit/SCR_GA_BN_0301_P04.html
@@ -8,9 +8,40 @@
 	</div>
 	
 	<div class="layer-body">
-		<div class="coupon">
-			
-			
+		<div class="txt-module-page">
+			<section class="section">
+				<p class="title-sm">가. 개인정보를 제공받는 자</p>
+				<ul class="list">
+					<li>군인인공제회C&amp;C</li>
+				</ul>
+			</section>
+			<section class="section">
+				<p class="title-sm">나. 개인정보를 제공받는 자의 개인정보 이용목적</p>
+				<ul class="list">
+					<li>나라사랑포털/국방복지포털 회원 대상 그린카 혜택 제공</li>
+				</ul>
+			</section>
+			<section class="section">
+				<p class="title-sm">다. 제공하는 개인정보의 항목</p>
+				<ul class="list">
+					<li>연계정보(CI)</li>
+				</ul>
+			</section>
+			<section class="section">
+				<p class="title-sm">라. 개인정보를 제공받는 자의 개인정보 보유 및 이용기간</p>
+				<ul class="list">
+					<li>군인공제회C&amp;C 제휴 기간 동안 그린카 혜택 대상자 확인을 위해 연계정보(CI)를 이용하며 제공받은 자는 별도 저장하지 않음</li>
+				</ul>
+			</section>
+			<section class="section">
+				<p class="title-sm">마. 동의 거부권 및 불이익 안내</p>
+				<ul class="list">
+					<li>귀하는 위와 같은 본인의 개인정보 수집/이용에 관한 동의를 거부할 권리가 있습니다. 동의를 거부하는 경우에도 회원가입, 일반 그린카 이용은 가능하나 국방부 제휴 서비스 및 제3자의 서비스/상품에 관한 이벤트, 혜택에 대한 정보를 제공받지 못하는 등 불이익이 있을 수 있습니다.</li>
+				</ul>
+				<p class="desc-md">
+					본인은 국방부 제휴 혜택을 위해 상기와 같이 그린카가 공인공제회C&C에 본인의 개인정보를 제공하는 것에 동의합니다.
+				</p>
+			</section>
 		</div>
 	</div>
 </div>
