--- a/src/status.html
+++ b/src/status.html
@@ -900,8 +900,8 @@
                             <td></td>
                             <td>이민우</td>
                             <td>/benefit</td>
-                            <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_P02.html">SCR_GA_BN_0301_P02.html</a></td>
-                            <td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#benefit#SCR_GA_BN_0301_P02#full">SCR_GA_BN_0301_P02.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -914,8 +914,8 @@
                             <td></td>
                             <td>이민우</td>
                             <td>/benefit</td>
-                            <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_P03.html">SCR_GA_BN_0301_P03.html</a></td>
-                            <td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#benefit#SCR_GA_BN_0301_P03#full">SCR_GA_BN_0301_P03.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -928,8 +928,8 @@
                             <td></td>
                             <td>이민우</td>
                             <td>/benefit</td>
-                            <td><a target="_blank" href="html/benefit/SCR_GA_BN_0301_P04.html">SCR_GA_BN_0301_P04.html</a></td>
-                            <td class="stat"></td>
+							<td><a target="_blank" href="components/popup_module.html#benefit#SCR_GA_BN_0301_P04#full">SCR_GA_BN_0301_P04.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -943,7 +943,7 @@
                             <td>이민우</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0302_M01.html">SCR_GA_BN_0302_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
