토스트 메세지 테스트 및 input 수정

--- a/src/html/benefit/SCR_GA_BN_0302_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0302_M01.html
@@ -24,7 +24,7 @@
 									<div class="ip-group">
 										<div class="row">
 											<label for="ip01" class="ip-label">롯데 이메일 계정 인증</label>
-											<input id="ip01" type="text" class="ip-txt" placeholder="롯데 이메일 계정 입력">
+											<input id="ip01" type="email" class="ip-txt" placeholder="롯데 이메일 계정 입력">
 											<div class="line"></div>
 										</div>
 										<p class="error-txt">롯데 이메일 계정이 일치하지 않습니다</p>
@@ -40,7 +40,7 @@
 	
 									<div class="ip-group box">
 										<div class="row">
-											<input type="password" id="fakePassword" class="ip-txt">
+											<input type="number" class="ip-txt">
 											<div class="line"></div>
 											<span class="icon-group">
 													3:00
@@ -58,13 +58,13 @@
                         </div>
                     </div>
 
-					<div class="toast-pop">
-						<div class="module">
-							<p class="message">
-								인증코드를 발송했습니다. 메일을 확인해주세요.
-								<p>
+					<div class="toast-pop center">
+						<div class="toast-container">
+							<div class="module">
+								<p class="message">
+									인증코드를 발송했습니다. 메일을 확인해주세요.
 								</p>
-							</p>
+							</div>
 						</div>
 					</div>
 
