혜택 > 이벤트 > 종료 case 추가

--- a/src/html/benefit/SCR_GA_BN_0101_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0101_M01.html
@@ -29,67 +29,74 @@
 								<span class="tab-indicator"></span>
 							</div>
                             <div class="event-list">
-                                <div class="event-item">
-                                    <div class="img-area">
-                                        <img src="" alt="">
-                                    </div>
-                                    <div class="text-area">
-                                        <div class="tit-txt">
-                                            그린카 이용만 하면<br>참여완료!
+                                <div class="event-item expired">
+                                    <a href="#"> 
+                                        <div class="img-area">
+                                            <img src="/images/dumm/dummy.jpg" alt="">
                                         </div>
-                                        <div class="effective-date">
-                                            <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                            <span class="badge pink sm">D-7</span>
+                                        <div class="text-area">
+                                            <div class="tit-txt">
+                                                그린카 이용만 하면 참여완료!
+                                            </div>
+                                            <div class="effective-date">
+                                                <span class="date">2022.05.01 ~ 2022.05.31</span>
+                                                <span class="badge pink sm">D-7</span>
+                                            </div>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="event-item">
-                                    <div class="img-area">
-                                        <img src="" alt="">
-                                    </div>
-                                    <div class="text-area">
-                                        <div class="tit-txt">
-                                            차이카드 유저라면 그린카99%,<br>
-                                            전국 휴게소 할인
+                                    <a href="#">
+                                        <div class="img-area">
+                                            <img src="/images/dumm/dummy.jpg" alt="">
                                         </div>
-                                        <div class="effective-date">
-                                            <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                            <span class="badge green sm">D-7</span>
+                                        <div class="text-area">
+                                            <div class="tit-txt">
+                                                차이카드 유저라면 그린카99%,
+                                                전국 휴게소 할인
+                                            </div>
+                                            <div class="effective-date">
+                                                <span class="date">2022.05.01 ~ 2022.05.31</span>
+                                                <span class="badge green sm">D-60</span>
+                                            </div>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="event-item">
-                                    <div class="img-area">
-                                        <img src="/images/dumm/dummy.png" alt="">
-                                    </div>
-                                    <div class="text-area">
-                                        <div class="tit-txt">
-                                            5월,<br>
-                                            그린카와 함께하는 혜택 모음.zip
+                                    <a href="#">
+                                        <div class="img-area">
+                                            <img src="/images/dumm/dummy.jpg" alt="">
                                         </div>
-                                        <div class="effective-date">
-                                            <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                            <span class="badge green sm">D-7</span>
+                                        <div class="text-area">
+                                            <div class="tit-txt">
+                                                5월,
+                                                그린카와 함께하는 혜택 모음.zip
+                                            </div>
+                                            <div class="effective-date">
+                                                <span class="date">2022.05.01 ~ 2022.05.31</span>
+                                                <span class="badge green sm">D-60</span>
+                                            </div>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
                                 <div class="event-item">
-                                    <div class="img-area">
-                                        <img src="" alt="">
-                                    </div>
-                                    <div class="text-area">
-                                        <div class="tit-txt">
-                                            그린카 멤버십 등급제<br>
-                                            리뉴얼 이벤트
+                                    <a href="#">
+                                        <div class="img-area">
+                                            <img src="/images/dumm/dummy.jpg" alt="">
                                         </div>
-                                        <div class="effective-date">
-                                            <span class="date">2022.05.01 ~ 2022.05.31</span>
-                                            <span class="badge green sm">D-7</span>
+                                        <div class="text-area">
+                                            <div class="tit-txt">
+                                                그린카 멤버십 등급제
+                                                리뉴얼 이벤트
+                                            </div>
+                                            <div class="effective-date">
+                                                <span class="date">2022.05.01 ~ 2022.05.31</span>
+                                                <span class="badge green sm">D-60</span>
+                                            </div>
                                         </div>
-                                    </div>
+                                    </a>
                                 </div>
-                                
-                            </div>
+                             </div>
                         </div>
                     </div>
                 </div>
