혜택 > 쿠폰몰 > 국방부 쿠폰몰

--- a/src/status.html
+++ b/src/status.html
@@ -1024,10 +1024,10 @@
                             <td></td>
                             <td>국방부 쿠폰몰</td>
                             <td>채널 선택</td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0308_M01.html">SCR_GA_BN_0308_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
