디자인 수정 반영

--- a/src/html/benefit/SCR_GA_BN_0202_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0202_M01.html
@@ -29,7 +29,7 @@
 								</div>
 								
 								<div class="info-tit">할인혜택</div>
-								<p class="desc-md">
+								<p class="desc-xl">
 									언제나 1시간 이상 대여시 50% 할인!<br>제주 제외
 								</p>
 	
