--- a/src/html/member/SCR_GA_CA_0103_M01.html
+++ b/src/html/member/SCR_GA_CA_0103_M01.html
@@ -19,7 +19,7 @@
 				<div class="member"> 
 					
 					<p class="corporation"><span>소속</span> 그린컴퍼니</p>
-					<p class="desc-xl">약관 동의가 필요해요</p>
+					<p class="icon_">약관 동의가 필요해요</p>
 
 					<div class="agree-wrap">
 						<div class="check-all">
