--- a/src/status.html
+++ b/src/status.html
@@ -372,7 +372,7 @@
                             <td></td>
                             <td>이민우</td>
                             <td>/reservation</td>
-                            <td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0203_M01_P01#bottom#drag">SCR_GA_RV_0203_M01_P01.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0203_M01_P01#bottom">SCR_GA_RV_0203_M01_P01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-12</td>
                             <td class="date"></td>
@@ -761,7 +761,7 @@
                             <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0101_M01.html">SCR_GA_BN_0101_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -775,7 +775,7 @@
                             <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0101_M01_01.html">SCR_GA_BN_0101_M01_01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -789,7 +789,7 @@
                             <td></td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0102_M01.html">SCR_GA_BN_0102_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -802,8 +802,8 @@
                             <td></td>
                             <td></td>
                             <td>/benefit</td>
-                            <td><a target="_blank" href="html/benefit/SCR_GA_BN_0103_M01.html">SCR_GA_BN_0103_M01.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="html/benefit/SCR_GA_BN_0101_M01.html">SCR_GA_BN_0101_M01.html</a></td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -817,7 +817,7 @@
                             <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0104_M01.html">SCR_GA_BN_0104_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -831,7 +831,7 @@
                             <td>박지수</td>
                             <td>/benefit</td>
                             <td><a target="_blank" href="html/benefit/SCR_GA_BN_0201_M01.html">SCR_GA_BN_0201_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat">⚫</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
