--- a/src/html/benefit/SCR_GA_BN_0301_P04.html
+++ b/src/html/benefit/SCR_GA_BN_0301_P04.html
@@ -38,7 +38,7 @@
 				<ul class="list">
 					<li>귀하는 위와 같은 본인의 개인정보 수집/이용에 관한 동의를 거부할 권리가 있습니다. 동의를 거부하는 경우에도 회원가입, 일반 그린카 이용은 가능하나 국방부 제휴 서비스 및 제3자의 서비스/상품에 관한 이벤트, 혜택에 대한 정보를 제공받지 못하는 등 불이익이 있을 수 있습니다.</li>
 				</ul>
-				<p class="desc-md">
+				<p class="desc-xl">
 					본인은 국방부 제휴 혜택을 위해 상기와 같이 그린카가 공인공제회C&C에 본인의 개인정보를 제공하는 것에 동의합니다.
 				</p>
 			</section>
