디자인 수정 반영

--- a/src/html/reservation/SCR_GA_RV_0201_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0201_M01.html
@@ -24,6 +24,7 @@
 							<div class="car-info">
 								<div class="module">
 									<a href="#">
+										<span class="badge">test</span>
 										<span class="img"><img src="/images/contents/img_car_dummy01.jpg" alt=""></span>
 										<div class="info">
 											<strong>145허4454</strong>
