--- a/src/html/reservation/SCR_GA_RV_0203_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0203_M01.html
@@ -25,15 +25,18 @@
 						<div class="link-box free">
 							<a href="#">
 								<p class="link-title"><span class="emp">프리존</span> 반납</p>
-								<p class="desc-xl">그린존에서 빌리고 <strong class="bold">어디든</strong> 반납 OK!
-								</p>
+								<!-- 20220808 -->
+								<p class="desc-md">그린존에서 빌리고 <strong class="bold">어디든</strong> 반납 OK!</p>
+								<!-- //20220808 -->
 							</a>
 						</div>
 
 						<div class="link-box green">
 							<a href="#">
 								<p class="link-title"><span class="emp">그린존</span> 반납</p>
-								<p class="desc-xl">그린존에서 빌리고 <strong class="bold">그린존</strong>으로 반납!</p>
+								<!-- 20220808 -->
+								<p class="desc-md">그린존에서 빌리고 <strong class="bold">그린존</strong>으로 반납!</p>
+								<!-- //20220808 -->
 							</a>
 						</div>
 
