--- a/src/html/reservation/SCR_GA_RV_0203_M01_P01.html
+++ b/src/html/reservation/SCR_GA_RV_0203_M01_P01.html
@@ -1,12 +1,14 @@
 <div class="layer-wrap rsv-one-way">
+	<!-- 20220808 -->
+	<div class="layer-header">
+		<p class="title">무료편도를 이용하실 수 있습니다</p>
+	</div>
 	<div class="layer-body">
-			
 		<div class="one-way">
-			<p class="desc-xl">무료편도를 이용하실 수 있습니다</p>
 			<p class="desc">주변 그린존에 바로 출발 가능한 무료편도가 있습니다. 무료편도는 대여요금, 주행요금, 보험료가 무료입니다!</p>
 		</div>
-	
 	</div>
+	<!-- //20220808 -->
 	<div class="layer-footer">
 		<div class="btn-wrap">
 			<div class="btn-group column">
