--- a/src/status.html
+++ b/src/status.html
@@ -361,7 +361,7 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0203_M01.html">SCR_GA_RV_0203_M01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-12</td>
-                            <td class="date"></td>
+                            <td class="date">20220808</td>
                             <td></td>
                         </tr>
                         <tr>
@@ -375,7 +375,7 @@
                             <td><a target="_blank" href="components/popup_module.html#reservation#SCR_GA_RV_0203_M01_P01#bottom">SCR_GA_RV_0203_M01_P01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-12</td>
-                            <td class="date"></td>
+                            <td class="date">20220808</td>
                             <td></td>
                         </tr>
                         <tr>
