그린카 퍼블리싱 산출물 리스트 업데이트

--- a/src/status.html
+++ b/src/status.html
@@ -1136,7 +1136,7 @@
                             <td></td>
                             <td></td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/.html">SCR_GA_CI_0401_P01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1150,7 +1150,7 @@
                             <td></td>
                             <td></td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/.html">SCR_GA_CI_0401_P02.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1166,20 +1166,6 @@
                             <td>/mypage</td>
                             <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P03#full">SCR_GA_CI_0401_P03.html</a></td>
                             <td class="stat">⚪</td>
-                            <td class="compl"></td>
-                            <td class="date"></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td>등급안내</td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
-                            <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1207,7 +1193,7 @@
                             <td></td>
                             <td></td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0401_P05.html">SCR_GA_CI_0401_P05.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1221,7 +1207,7 @@
                             <td></td>
                             <td></td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0501_M01.html">SCR_GA_CI_0501_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1235,7 +1221,7 @@
                             <td></td>
                             <td></td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0602_M01.html">SCR_GA_CI_0602_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1249,7 +1235,7 @@
                             <td></td>
                             <td></td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0601_M01.html">SCR_GA_CI_0601_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1263,7 +1249,7 @@
                             <td></td>
                             <td></td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0602_M01.html">SCR_GA_CI_0602_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
