내정보 > 등급 > 내 이동거리 -- 작업 중

--- a/src/html/mypage/SCR_GA_CI_0401_P03.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P03.html
@@ -62,8 +62,9 @@
                         </strong>
                         <p class="criteria">누적 대여시간 기준 : 36시간 ~</p>
                         <div class="benefit">
+                            <p><em>등급UP혜택</em>24시간 무료쿠폰 1매</p>
                             <p><em>월간혜택</em> 주중 50% 할인쿠폰 1매</p>
-                            <p><em>주행거리 리워드</em> 주행거리x10포인트</p>
+                            <p><em>주행거리 리워드</em> 주행거리x20포인트</p>
                         </div>
                     </div>
                 </li>
@@ -76,10 +77,10 @@
                             <span class="badge line md">Lv.4</span>
                             실버2
                         </strong>
-                        <p class="criteria">누적 대여시간 기준 : 10시간 ~</p>
+                        <p class="criteria">누적 대여시간 기준 : 72시간 ~</p>
                         <div class="benefit">
                             <p><em>월간혜택</em> 주중 50% 할인쿠폰 1매</p>
-                            <p><em>주행거리 리워드</em> 주행거리x10포인트</p>
+                            <p><em>주행거리 리워드</em> 주행거리x20포인트</p>
                         </div>
                     </div>
                 </li>
@@ -92,10 +93,10 @@
                             <span class="badge line md">Lv.5</span>
                             골드1
                         </strong>
-                        <p class="criteria">누적 대여시간 기준 : 10시간 ~</p>
+                        <p class="criteria">누적 대여시간 기준 : 150시간 ~</p>
                         <div class="benefit">
                             <p><em>월간혜택</em> 주중 50% 할인쿠폰 1매</p>
-                            <p><em>주행거리 리워드</em> 주행거리x10포인트</p>
+                            <p><em>주행거리 리워드</em> 주행거리x30포인트</p>
                         </div>
                     </div>
                 </li>
@@ -108,10 +109,10 @@
                             <span class="badge line md">Lv.6</span>
                             골드2
                         </strong>
-                        <p class="criteria">누적 대여시간 기준 : 10시간 ~</p>
+                        <p class="criteria">누적 대여시간 기준 : 300시간 ~</p>
                         <div class="benefit">
                             <p><em>월간혜택</em> 주중 50% 할인쿠폰 1매</p>
-                            <p><em>주행거리 리워드</em> 주행거리x10포인트</p>
+                            <p><em>주행거리 리워드</em> 주행거리x30포인트</p>
                         </div>
                     </div>
                 </li>
@@ -126,9 +127,9 @@
                         </strong>
                         <p class="criteria">누적 대여시간 기준 : 600시간 ~</p>
                         <div class="benefit">
-                            <p><em>등급UP혜택</em> 24시간 무료쿠폰 1매</p>
-                            <p><em>월간혜택</em> 주중 50% 할인쿠폰 1매</p>
-                            <p><em>주행거리 리워드</em> 주행거리x30포인트</p>
+                            <p><em>등급UP혜택</em> 10/24시간 무료쿠폰 각1매</p>
+                            <p><em>월간혜택</em> 주중/주말 50% 할인쿠폰 1매</p>
+                            <p><em>주행거리 리워드</em> 주행거리x40포인트</p>
                         </div>
                     </div>
                 </li>
@@ -144,7 +145,7 @@
                         <p class="criteria">누적 대여시간 기준 : 1,000시간 ~</p>
                         <div class="benefit">
                             <p><em>등급UP혜택</em> 10/24시간 무료쿠폰 각1매</p>
-                            <p><em>월간혜택</em> 주중 50% 할인쿠폰 1매</p>
+                            <p><em>월간혜택</em> 주중/주말 50% 할인쿠폰 1매</p>
                             <p><em>주행거리 리워드</em> 주행거리x40포인트</p>
                         </div>
                     </div>
