--- a/src/status.html
+++ b/src/status.html
@@ -1191,10 +1191,10 @@
                             <td>내 이동거리</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_0401_P05.html">SCR_GA_CI_0401_P05.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P05#full">SCR_GA_CI_0401_P05.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
