--- a/src/status.html
+++ b/src/status.html
@@ -1134,10 +1134,10 @@
                             <td>등급UP 미션</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>박지수</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">SCR_GA_CI_0401_P01.html</a></td>
-                            <td class="stat"></td>
+                            <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_0401_P01">SCR_GA_CI_0401_P01.html</a></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
