내 정보 >  내 쿠폰 -- 작업 중

--- a/src/html/benefit/SCR_GA_BN_0201_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0201_M01.html
@@ -12,7 +12,7 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="benefit">
+                    <div class="cont benefit coupon">
                         <div class="gc-tab">
                             <ul>
                                 <li><a href="#">이벤트</a></li>
