--- a/src/html/mypage/SCR_GA_CI_0401_P02.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P02.html
@@ -1,6 +1,6 @@
 <div class="layer-wrap">
     <div class="layer-header">
-        <h5 class="title">다이아2로 승급되었습니다</h5>
+        <h5 class="title">다이아<strong>2</strong>로 승급되었습니다</h5>
         <!-- <button type="button" class="layer-close" >닫기</button> -->
     </div>
     <div class="layer-body">
