--- a/src/html/mypage/SCR_GA_CI_0401_P05.html
+++ b/src/html/mypage/SCR_GA_CI_0401_P05.html
@@ -34,37 +34,37 @@
                         <span class="distance">500km</span>
                         <span class="date-reached">22.04.20</span>
                     </li>
-                    <li class="milestone tobe">
+                    <li class="milestone">
                         <span class="name">상해</span>
                         <span class="dot"></span>
                         <span class="distance">1,000km</span>
                     </li>
-                    <li class="milestone tobe">
+                    <li class="milestone">
                         <span class="name">대만</span>
                         <span class="dot"></span>
                         <span class="distance">1,500km</span>
                     </li>
-                    <li class="milestone tobe">
+                    <li class="milestone">
                         <span class="name">홍콩</span>
                         <span class="dot"></span>
                         <span class="distance">2,000km</span>
                     </li>
-                    <li class="milestone tobe">
+                    <li class="milestone">
                         <span class="name">하노이</span>
                         <span class="dot"></span>
                         <span class="distance">3,000km</span>
                     </li>
-                    <li class="milestone tobe">
+                    <li class="milestone">
                         <span class="name">방콕</span>
                         <span class="dot"></span>
                         <span class="distance">3,500km</span>
                     </li>
-                    <li class="milestone tobe">
+                    <li class="milestone">
                         <span class="name">카트만두</span>
                         <span class="dot"></span>
                         <span class="distance">4,000km</span>
                     </li>
-                    <li class="milestone tobe">
+                    <li class="milestone">
                         <span class="name">싱가폴</span>
                         <span class="dot"></span>
                         <span class="distance">4,500km</span>
